# ConvoKit_Disputes

./: .gitignore  .gitmodules  CRAFT_fine_tuning_demo_using_ConvoKit.ipynb  ConvoKitNotes.md  README.md  _quarto.yml  index.qmd  index.quarto_ipynb  pyproject.toml  which
.quarto/idx/: ConvoKitNotes.md.json  index.qmd.json
.quarto/xref/: 1c5a5290  44b6ca11  6a0abcfa  758d3d4f  847bcf31  INDEX  a7907882
Annotations/: ConvoKitNotes.md
convokit_notebooks/: CRAFT_fine_tuning_demo_using_ConvoKit.ipynb  Conversations_Gone_Awry_Prediction.ipynb  craft_demo_new.ipynb  wiki_awry_demo.ipynb
data/: alldyads.xlsx  headers.csv  headers.xlsx  preprocessed_dyads.csv  preprocessed_dyads_labels.csv
dataprocessing/: data_explore.html  data_explore.qmd  data_preprocessing.ipynb
dataprocessing/modules/: CorpusUtils.py  DataPreprocesser.py
diagrams/: CRAFT.wsd  chat_box.wsd  context_tuple.wsd  corpus.wsd  corpus_transformer.wsd  forecaster_fit.wsd  forecaster_transform.wsd  kodis_to_corpus  kodis_to_corpus_final.wsd  utterance.wsd
docs/: ConvoKitNotes.html  index.html  search.json
docs/Annotations/: ConvoKitNotes.html  text.html
docs/CRAFT/: fine_tuning_demo.html  (+1 more)
notebooks/: CRAFT_fine_tuning_demo_using_ConvoKit.ipynb  Conversations_Gone_Awry_Prediction.ipynb  craft_demo_new.ipynb  fine_tuning_demo.ipynb
src/: CRAFT_Corpus_Explorer.html  CRAFT_Corpus_Explorer.ipynb  Forcaster_Explorer.ipynb  Forecaster_analysis.ipynb  corpus_converter.ipynb  data_preprocessing.ipynb  explore_py.ipynb  explore_r.qmd  fine-tuning.ipynb  fine-tuning_analysis.ipynb  main.py
(+35 files in other folders)
