[project]
name = "convokit-disputes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.9.1",
    "notebook>=7.3.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
    "ydata-profiling>=4.15.0",
    "bitsandbytes==0.42.0",
    "convokit>=3.1.0",
    "tqdm>=4.67.1",
]
